# identedit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-binaries.yml
skills/identedit/: SKILL.md
src/: apply.rs  changeset.rs  error.rs  execution_context.rs  grammar.rs  handle.rs  hash.rs  hashline.rs  lib.rs  main.rs  selector.rs  transform.rs
src/apply/: io.rs  move_ops.rs  preflight.rs  replacements.rs
src/cli/: apply.rs  changeset.rs  edit.rs  edit_build.rs  grammar.rs  hashline.rs  line_patch.rs  merge.rs  merge_plan.rs  mod.rs  patch.rs  read.rs  read_select.rs  select.rs  transform.rs
src/hashline/: apply.rs  check.rs  repair.rs  show.rs  tests.rs
tests/: apply_integration.rs  bash_integration.rs  c_integration.rs  changeset_merge_integration.rs  cli_surface_integration.rs  cpp_integration.rs  csharp_integration.rs  css_integration.rs  deep_nesting_resilience.rs  dockerfile_integration.rs  e2e_transform_apply.rs  edit_integration.rs  fish_integration.rs  go_integration.rs  grammar_install_integration.rs  hashline_cli_integration.rs  hashline_token_bench_script.rs  hcl_integration.rs  html_integration.rs  java_integration.rs  json_payload_fuzz.rs  jsts_ambiguity.rs  jsts_binary_taxonomy.rs  jsts_integration.rs  jsts_line_endings.rs  jsts_name_filter.rs  jsts_parse_failure.rs  jsts_stale_reorder.rs  kotlin_integration.rs  lua_integration.rs  markdown_integration.rs  patch_integration.rs  perl_integration.rs  php_integration.rs  protobuf_integration.rs  read_edge_cases.rs  read_hunt_rounds.rs  read_json.rs  read_python.rs  ruby_integration.rs  (+15 more)
(+104 files in other folders)
